# stocker

./: .envrc  .envrc.example  .gitignore  CLAUDE.md  Makefile
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: router.py  runner.py  tools.py
backend/app/broker/: kiwoom_auth.py  kiwoom_order.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: engine.py  models.py
backend/app/market/: indicators.py  kiwoom.py  router.py  schemas.py  service.py  source.py  synthetic.py
backend/app/permission/: queue.py
backend/app/portfolio/: store.py
backend/app/risk/: engine.py
backend/app/strategies/: base.py  ma_crossover.py  router.py  rsi_reversion.py  runner.py
backend/tests/agent/: test_tools.py
backend/tests/broker/: test_kiwoom_auth.py
backend/tests/broker/cassettes/: kiwoom_get_token.yaml
backend/tests/broker/cassettes/test_kiwoom_auth/: test_get_token_caches_result.yaml
backend/tests/market/: test_indicators.py  test_synthetic.py
config/: permissions.yaml
frontend/: next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/dashboard/: DashboardClient.tsx  page.tsx
frontend/components/agent/: AgentControls.tsx  ProposalQueue.tsx  ProposalRow.tsx  ReasoningList.tsx
frontend/hooks/: usePriceFeed.ts
frontend/lib/: indicators.ts
frontend/types/: proposal.ts
knowledge/indicators/: moving-averages.md
knowledge/kiwoom-api/: market-data.md  token-issuance.md
knowledge/market-rules/: trading-hours.md
knowledge/strategies/: ma-crossover.md  rsi-reversion.md
(+5 files in other folders)
